infra/k8s/ingress.serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: tickets.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                  name: auth-srv
                  port:
                    number: 3000
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                  name: client-srv
                  port:
                    number: 3000
